Remove extra border on icon and fix spacing of header in advocate locally section

--- a/pegasus/sites.v3/code.org/public/css/advocate-locally.css
+++ b/pegasus/sites.v3/code.org/public/css/advocate-locally.css
@@ -32,6 +32,7 @@
   font-size: 26px;
   padding-bottom: 10px;
   color: white;
+  line-height: 26px;
 }
 
 .join-coalition-wrapper .right .subheading {
