--- a/pegasus/sites.v3/code.org/public/css/interactive-map.css
+++ b/pegasus/sites.v3/code.org/public/css/interactive-map.css
@@ -72,7 +72,7 @@
 
 .icon-fact .fa-times-circle {
   color: lightgray;
-  font-size: 48px;
+  font-size: 49px; 
 }
 
 .fa-circle {
